[metadata]
name = redoubt_agent
version = 0.1.15
description = re:doubt Threat Detection Python SDK
url = https://www.redoubt.online/
project_urls = 
    Source = https://github.com/re-doubt/redoubt-bot-python-sdk
    Documentation =  https://docs.redoubt.online/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    jsonc_parser
    web3==5.23.0
    hexbytes
    mmh3==3.0.0

[options.packages.find]
where = src