[metadata]
name = redoubt_agent
version = 0.1.98
description = re:doubt Bot Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.redoubt.online/
keywords = TON, redoubt, sdk
license = Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
author = maksymds
author_email = redoubt@devnull.ae
project_urls = 
    Github = https://github.com/re-doubt/redoubt-bot-python-sdk
    Documentation =  https://docs.redoubt.online/

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    gql==3.4.1
    loguru==0.7.0

[options.packages.find]
exclude =
    devtools*
    docs*
    tests*
    venv*
